--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,18 @@ branches:
     - master
 
 before_install:
-  - sudo apt-get -y update
-  - sudo apt-get -y purge docker-engine
-  - sudo apt-get -y install docker-engine
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+
+
+#    佈署相關資訊
+#deploy:
+#  provider: pages
+#  skip-cleanup: true
+#  github-token: $GITHUB_TOKEN
+#  local-dir: public
+#  repo: ms314006/ms314006.github.io
+#  target_branch: master
 
