--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - docker
 env:
   - DB=mysql
-  - DOCKER_COMPOSE_VERSION=last
+  - DOCKER_COMPOSE_VERSION=19.03.12
 branches:
   only:
     - master
@@ -23,6 +23,7 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+  - docker-compose up -d --build
   - docker-compose exec shop-web bash
   - cd /var/www
   - vendor/bin/phpunit
