--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,32 @@
 language: php
-#php:
+php:
 #  - 7.0
 #  - 7.1
 #  - 7.2
-#  - 7.3
+  - 7.3
 services:
-  - docker
-env:
-  - DB=mysql
-  - DOCKER_COMPOSE_VERSION=19.03.12
+#  - docker
+  - mysql
+#env:
+#  - DB=mysql
+#  - DOCKER_COMPOSE_VERSION=19.03.12
 branches:
   only:
     - master
 
 before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-
-install:
+#  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+#  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+#  - sudo apt-get update
+#  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+#
+#  - sudo rm /usr/local/bin/docker-compose
+#  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+#  - chmod +x docker-compose
+#  - sudo mv docker-compose /usr/local/bin
+  - mysql -e 'CREATE DATABASE nuxt_shop;'
+before_script:
+  - composer self-update;
   - composer install --prefer-dist --optmize-autoloader --quiet
 
 script: vendor/bin/phpunit
