--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 php:
-#  - 7.0
-#  - 7.1
-#  - 7.2
+  - 7.0
+  - 7.1
+  - 7.2
   - 7.3
 services:
 #  - docker
@@ -26,8 +26,9 @@ before_install:
 #  - sudo mv docker-compose /usr/local/bin
   - mysql -e 'CREATE DATABASE nuxt_shop;'
 before_script:
+  - cp .env.example .env
   - composer self-update;
-  - composer install --prefer-dist --quiet
+  - composer install --no-interaction
 
 script: vendor/bin/phpunit
 
