--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 services:
 #  - docker
   - mysql
@@ -27,6 +28,7 @@ before_install:
   - mysql -e 'CREATE DATABASE nuxt_shop;'
 before_script:
   - cp .env.example .env
+  - cp docker-compose.yml.example docker-compose.yml
   - composer self-update;
   - composer install --no-interaction
 
