--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_script:
   - cp docker-compose.yml.example docker-compose.yml
   - composer self-update;
   - composer install --no-interaction
+  - php artisan migration
 
 script: vendor/bin/phpunit
 
