--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,24 @@
-language: php
-php:
-  - 7.0
-  - 7.1
-  - 7.2
-  - 7.3
-  - 7.4
+sudo: required
+
 services:
-#  - docker
-  - mysql
-#env:
-#  - DB=mysql
-#  - DOCKER_COMPOSE_VERSION=19.03.12
-branches:
-  only:
-    - master
+  - docker
+
+env:
+  DOCKER_COMPOSE_VERSION: 1.23.2
 
 before_install:
-#  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-#  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-#  - sudo apt-get update
-#  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-#
-#  - sudo rm /usr/local/bin/docker-compose
-#  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-#  - chmod +x docker-compose
-#  - sudo mv docker-compose /usr/local/bin
-  - mysql -e 'CREATE DATABASE nuxt_shop;'
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+
 before_script:
-  - cp .env.example .env
-  - cp docker-compose.yml.example docker-compose.yml
-  - composer self-update;
-  - composer install --no-interaction
-#  - php artisan migrate
+  - docker-compose up -d --build
 
 script: vendor/bin/phpunit
+
+after_script:
+  - docker-compose down
 
 #    佈署相關資訊
 #deploy:
