--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
+  - cp .env.example .env
+  - cp docker-compose.yml.example docker-compose.yml
   - docker-compose up -d --build
 
 script: vendor/bin/phpunit
