--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,19 @@ before_script:
   - cp .env.example .env
   - cp docker-compose.yml.example docker-compose.yml
   - docker-compose up -d --build
+  - composer install
 #  - docker-compose exec shop-web bash
 #  - cd /var/www
 
-jobs:
-  fast_finish: true
-  include:
-    -
-      script:
-        - composer install
-        - vendor/bin/phpunit
+#jobs:
+#  fast_finish: true
+#  include:
+#    -
+#      script:
+#        - composer install
+#        - vendor/bin/phpunit
 
-#script: vendor/bin/phpunit
+script: vendor/bin/phpunit
 
 after_script:
   - docker-compose down
