--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_script:
   - cp .env.example .env
   - cp docker-compose.yml.example docker-compose.yml
   - docker-compose up -d --build
-  - composer install
+#  - composer install
 # 以上為docker環境設置
 
-#  - docker-compose exec shop-web bash
+  - docker-compose exec shop-web bash
 #  - cd /var/www
 
 #jobs:
