--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
   - docker
 
 env:
-  DOCKER_COMPOSE_VERSION: 1.23.2
+#  DOCKER_COMPOSE_VERSION: 1.23.2
+  DOCKER_COMPOSE_VERSION: 19.03.12
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
