--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ env:
 
 before_install:
   - sudo apt-get -y update
-  - sudo apt-get -y purge docker-engine
-  - sudo apt-get -y install docker-engine
+  - sudo apt-get -y purge docker.io
+  - sudo apt-get -y install docker.io
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
