--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 # 以上為docker環境設置
 #  - docker container ls
 #  - 設定db環境(直接匯入資料庫)
-  - cp docker/nuxt_shop.sql docker/mysql/nuxt_shop.sql
+  - sudo cp nuxt_shop.sql docker/mysql/nuxt_shop.sql
   - docker exec -it testlumen_shop-db_1 bash
   - mysql -u root -p
   - root
