--- a/.travis.yml
+++ b/.travis.yml
@@ -67,16 +67,16 @@ script:
 #  composer install;
 #  vendor/bin/phpunit;
   docker exec -it testlumen_shop-db_1 bash -c "
-  mysql -u root -p  root && \
-  show databases; && \
-  CREATE DATABASE  nuxt_shop; && \
-  show databases; && \
-  mysql -u root -p nuxt_shop < nuxt_shop.sql; && \
-  exit; && \
-  exit; "
+  mysql -u root -p root && \
+  show databases && \
+  CREATE DATABASE  nuxt_shop && \
+  show databases && \
+  mysql -u root -p nuxt_shop < nuxt_shop.sql && \
+  exit && \
+  exit "
   docker exec -it testlumen_shop-web_1 bash -c "
   cd /var/www && \
-  composer install && \
+  composer install&& \
   vendor/bin/phpunit "
 
 after_script:
