--- a/.travis.yml
+++ b/.travis.yml
@@ -66,14 +66,16 @@ script:
 #  cd /var/www;
 #  composer install;
 #  vendor/bin/phpunit;
-  docker exec -it testlumen_shop-db_1 bash -c "
-  mysql -u root -proot && \
-  show databases && \
-  CREATE DATABASE  nuxt_shop && \
-  show databases && \
-  mysql -u root -p nuxt_shop < nuxt_shop.sql && \
-  exit && \
-  exit "
+  docker exec -i testlumen_shop-db_1  mysql -uroot -proot CREATE DATABASE  nuxt_shop;
+  docker exec -i testlumen_shop-db_1  mysql -uroot -proot nuxt_shop < nuxt_shop.sql;
+#  docker exec -it testlumen_shop-db_1 bash -c "
+#  mysql -u root -proot && \
+#  show databases && \
+#  CREATE DATABASE  nuxt_shop && \
+#  show databases && \
+#  mysql -u root -p nuxt_shop < nuxt_shop.sql && \
+#  exit && \
+#  exit "
   docker exec -it testlumen_shop-web_1 bash -c "
   cd /var/www && \
   composer install&& \
