--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
 #  - docker container ls
 #  - 設定db環境(直接匯入資料庫)
   - sudo cp nuxt_shop.sql docker/mysql/nuxt_shop.sql
+  - docker-compose ps
 #  - docker-comopse exec shop-db show databases;
 #  - docker exec -it testlumen_shop-db_1 bash
 #  - mysql -u root -p
