--- a/.travis.yml
+++ b/.travis.yml
@@ -67,12 +67,12 @@ script:
 #  cd /var/www;
 #  composer install;
 #  vendor/bin/phpunit;
-#  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot CREATE DATABASE  nuxt_shop; "
-#  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql "
+  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot CREATE DATABASE  nuxt_shop;exit;"
+  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql;exit;"
 #  docker exec -i testlumen_shop-db_1  mysql -uroot -proot CREATE DATABASE  nuxt_shop;
 #  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql "
 #  docker exec -i testlumen_shop-db_1  mysql -uroot -proot nuxt_shop < nuxt_shop.sql;
-  docker exec -it testlumen_shop-db_1 bash -c "  mysql -u root -proot;show databases;CREATE DATABASE  nuxt_shop;show databases;mysql -u root -p nuxt_shop < nuxt_shop.sql;exit;exit; "
+#  docker exec -it testlumen_shop-db_1 bash -c "  mysql -u root -proot;show databases;CREATE DATABASE  nuxt_shop;show databases;mysql -u root -p nuxt_shop < nuxt_shop.sql;exit;exit; "
   docker exec -it testlumen_shop-web_1 bash -c "
   cd /var/www && \
   composer install&& \
