--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
 # 以上為docker環境設置
 #  - docker container ls
 #  - 設定db環境(直接匯入資料庫)
+  - cat hosts
   - sudo cp nuxt_shop.sql docker/mysql/nuxt_shop.sql
   - docker-compose ps
 #  - docker-comopse exec shop-db show databases;
@@ -67,15 +68,15 @@ script:
 #  cd /var/www;
 #  composer install;
 #  vendor/bin/phpunit;
-  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot CREATE DATABASE  nuxt_shop;exit;"
-  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql;exit;"
+#  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot CREATE DATABASE  nuxt_shop;exit;"
+#  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql;exit;"
 #  docker exec -i testlumen_shop-db_1  mysql -uroot -proot CREATE DATABASE  nuxt_shop;
 #  docker exec -it testlumen_shop-db_1 bash -c " mysql -uroot -proot nuxt_shop < nuxt_shop.sql "
 #  docker exec -i testlumen_shop-db_1  mysql -uroot -proot nuxt_shop < nuxt_shop.sql;
 #  docker exec -it testlumen_shop-db_1 bash -c "  mysql -u root -proot;show databases;CREATE DATABASE  nuxt_shop;show databases;mysql -u root -p nuxt_shop < nuxt_shop.sql;exit;exit; "
-  docker exec -it testlumen_shop-web_1 bash -c "
-  cd /var/www && \
-  composer install&& \
+#  docker exec -it testlumen_shop-web_1 bash -c "
+#  cd /var/www && \
+#  composer install&& \
   vendor/bin/phpunit "
 
 after_script:
