--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -9,14 +9,14 @@ services:
       - ./:/var/www/
       - ./docker/default.conf:/etc/nginx/conf.d/default.conf
 #      - ./docker/php.ini:/etc/php/7.4/fpm/conf.d/custom.ini
-    depends_on:
-      - shop-db
-  shop-db:
-    image: mysql:5.7.30
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - "3306:3306"
-    volumes:
-      - ./docker/mysql:/var/lib/mysql
+#    depends_on:
+#      - shop-db
+#  shop-db:
+#    image: mysql:5.7.30
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: root
+#    ports:
+#      - "3306:3306"
+#    volumes:
+#      - ./docker/mysql:/var/lib/mysql
