--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ env:
   DOCKER_COMPOSE_VERSION: 1.27.0-rc1
   DB_HOST: 127.0.0.1
   DB_PORT: 3306
-  DB_DATABASE: nuxt_shop
-  DB_USERNAME: root
-  DB_PASSWORD: root
+#  DB_DATABASE: nuxt_shop
+#  DB_USERNAME: root
+#  DB_PASSWORD: root
 before_install:
   - sudo apt-get -y update
   - sudo apt-get -y purge docker.io
@@ -20,11 +20,12 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - mysql -e "CREATE DATABASE ${DB_DATABASE};"
-  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
-  - ls -lah
+  - sudo mysql -e "CREATE DATABASE ${DB_DATABASE};"
   - sudo mysql -e 'SHOW DATABASES;'
-  - mysql -u root -proot nuxt_shop < nuxt_shop.sql;
+#  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
+#  - ls -lah
+  - sudo mysql -e 'nuxt_shop < nuxt_shop.sql;'
+  - sudo mysql -e 'SHOW DATABASES;'
 #  - mysql -e "mysql -u root -proot  nuxt_shop < nuxt_shop.sql;"
 before_script:
   - ls -lah
