--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_install:
   - sudo mysql -e 'SHOW DATABASES;'
 #  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
 #  - ls -lah
-  - sudo mysql -e 'nuxt_shop < nuxt_shop.sql;'
-  - sudo mysql -e 'SHOW DATABASES;'
+  - sudo mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+  - sudo mysql -e SHOW DATABASES
 #  - mysql -e "mysql -u root -proot  nuxt_shop < nuxt_shop.sql;"
 before_script:
   - ls -lah
