--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ script:
 #  cd /var/www && \
 #  composer install&& \
 #  vendor/bin/phpunit "
-  - docker exec -it testlumen_shop-web_1 bash
+#  - docker exec -it testlumen_shop-web_1 bash
+  - docker-compose exec shop-web bash
   - cd /var/www && composer install && vendor/bin/phpunit
 
 after_script:
