--- a/.travis.yml
+++ b/.travis.yml
@@ -39,9 +39,9 @@ script:
 #  cd /var/www && \
 #  composer install&& \
 #  vendor/bin/phpunit "
-#  - docker exec -it testlumen_shop-web_1 bash
-  - docker-compose exec shop-web bash
-  - cd /var/www && composer install && vendor/bin/phpunit
+  - docker exec -it testlumen_shop-web_1 bash -c " /var/www/vendor/bin/phpunit "
+#  - docker-compose exec shop-web bash
+#  - cd /var/www && composer install && vendor/bin/phpunit
 
 after_script:
   - docker-compose down
