--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 #  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
 #  - ls -lah
   - sudo mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
-  - sudo  docker restart
+#  - sudo  docker restart
 #  - sudo mysql -e 'SHOW DATABASES;'
 #  - mysql -e "mysql -u root -proot  nuxt_shop < nuxt_shop.sql;"
 before_script:
@@ -37,6 +37,7 @@ before_script:
 #  - service docker restart
   - docker-compose ps
   - docker container ps
+  - sudo docker restart testlumen_shop-web_1
 script:
 #  - docker exec `cat testlumen_shop-web_1` sh -c "id -a"
 #  - docker exec -u root `cat container_id` sh -c "mkdir /repository"
