--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 #  - sudo rm /usr/local/bin/docker-compose
 #  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
 #  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+#  - sudo mv docker-compose /usr/local/bin
   - sudo mysql -e "CREATE DATABASE nuxt_shop;"
 #  - sudo mysql -e 'SHOW DATABASES;'
 #  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
