--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,12 @@ before_script:
 #  - sudo cp nuxt_shop.sql docker/mysql/nuxt_shop.sql
 #  - service docker restart
 #  - docker-compose ps
-#  - docker container ps
+  - docker container ps
 #  - sudo docker restart testlumen_shop-web_1
 script:
 
 #  - docker exec `cat testlumen_shop-web_1` sh -c "id -a"
-  - docker-compose exec shop-web bash
+#  - docker-compose exec shop-web bash
   - cd /var/www &&\
   - composer install &&\
   - vendor/bin/phpunit
