--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ before_install:
 #  - mysql -e "mysql -u root -proot  nuxt_shop < nuxt_shop.sql;"
 before_script:
 #  - ls -lah
+  - docker kill $(docker ps -q)
+  - docker rm $(docker ps -qa)
+  - docker rmi $(docker images -q)
   - cp .env.example .env
   - cp docker-compose.yml.example docker-compose.yml
   - docker-compose up -d --build
