--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 #  - mysql -e "mysql -u root -proot  nuxt_shop < nuxt_shop.sql;"
 before_script:
 #  - ls -lah
-  - docker kill $(docker ps -q)
+#  - docker kill $(docker ps -q)
   - docker rm $(docker ps -qa)
   - docker rmi $(docker images -q)
   - cp .env.example .env
