--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -7,7 +7,7 @@ services:
       - "80:80"
     volumes:
       - ./:/var/www/
-      - ./docker/default.conf:/etc/nginx/conf.d/default.conf
+#      - ./docker/default.conf:/etc/nginx/conf.d/default.conf
 #      - ./docker/php.ini:/etc/php/7.4/fpm/conf.d/custom.ini
 #    depends_on:
 #      - shop-db
