--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=docker.for.mac.localhost
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=nuxt_shop
 DB_USERNAME=root
