--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD(${DB_PASSWORD}) where User='{DB_USERNAME}'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql -e use mysql; update user set authentication_string=PASSWORD(${DB_PASSWORD}) where User='{DB_USERNAME}'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;
   - sudo mysql -u ${DB_USERNAME} -p${DB_PASSWORD} -e "CREATE DATABASE ${DB_DATABASE};"
 #  - sudo mysql -e 'SHOW DATABASES;'
 #  - mysql -e "SET PASSWORD = PASSWORD('${DB_PASSWORD}');"
