--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=nuxt_shop
-DB_USERNAME=root
-DB_PASSWORD=root
+#DB_USERNAME=root
+#DB_PASSWORD=root
 
 WEB_PORT=80
 
