--- a/.drone.yaml
+++ b/.drone.yaml
@@ -11,3 +11,6 @@ steps:
     image: php:7
     commands:
       - vendor/bin/phpunit --configuration config.xml
+    when:
+      branch:
+        - master
