--- a/.drone.yaml
+++ b/.drone.yaml
@@ -1,18 +1,6 @@
-kind: pipeline
-type: docker
-name: default
-clone:
-  depth: 50
-steps:
-  - name: install
-    image: composer
-    commands:
-      - composer install
-
-  - name: test
+pipeline:
+  build:
     image: php
     commands:
+      - composer install
       - vendor/bin/phpunit
-    when:
-      branch:
-        - master
