--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,18 @@
-pipeline:
-  build:
-    image: php
+kind: pipeline
+type: docker
+name: default
+clone:
+  depth: 50
+steps:
+  - name: install
+    image: composer
     commands:
       - composer install
+
+  - name: test
+    image: php
+    commands:
       - vendor/bin/phpunit
+    when:
+      branch:
+        - master
