--- a/.drone.yml
+++ b/.drone.yml
@@ -1,23 +1,23 @@
-#kind: pipeline
-#type: docker
-#name: default
-#clone:
-#  depth: 50
-#steps:
-#  - name: install
-#    image: composer
-#    commands:
-#      - composer install
-#  - name: test
-#    image: php
-#    commands:
-#      - vendor/bin/phpunit
-#    when:
-#      branch:
-#        - master
-pipeline:
-  build:
-    image:php:7.4-fpm-alpine3.10
+kind: pipeline
+type: docker
+name: default
+clone:
+  depth: 50
+steps:
+  - name: install
+    image: composer
     commands:
       - composer install
+  - name: test
+    image: php
+    commands:
       - vendor/bin/phpunit
+    when:
+      branch:
+        - master
+#pipeline:
+#  build:
+#    image:php:7.4-fpm-alpine3.10
+#    commands:
+#      - composer install
+#      - vendor/bin/phpunit
