--- a/.drone.yml
+++ b/.drone.yml
@@ -4,10 +4,18 @@ name: default
 clone:
   depth: 50
 steps:
-  - name: install
-    image: composer
+  - name: build
+    image: ./docker/
     commands:
-      - composer install
+      - cp .env.example .env
+      - cp docker-compose.yml.example docker-compose.yml
+      - docker-compose up -d --build
+      - docker-compose exec shop-db bash
+      - mysql -u root -p
+      - root
+      - SHOW DATABASES;
+      - CREATE DATABASE nuxt_shop;
+#      - composer install
   - name: test
     image: php
     commands:
