--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ clone:
   depth: 50
 steps:
   - name: build
-    image: ./docker/
+    build: ./docker/
     commands:
       - cp .env.example .env
       - cp docker-compose.yml.example docker-compose.yml
