--- a/.drone.yml
+++ b/.drone.yml
@@ -1,15 +1,22 @@
 kind: pipeline
-type: docker
 name: default
+
 clone:
   depth: 50
 steps:
   - name: install
     image: composer
     commands:
-      - composer install
       - ls -al
-      - vendor/bin/phpunit
+      - cp .env.example .env
+      - cp docker-compose.yml.example docker-compose.yml
+      - docker-compose up -d --build
+      - docker-compose ps
+      - docker ps
+      - docker-compose exec shop-db bash
+      - mysql -u root -p
+      - root
+#      - vendor/bin/phpunit
 #  - name: test
 #    image: php
 #    commands:
@@ -17,15 +24,15 @@ steps:
 #    when:
 #      branch:
 #        - master
-services:
-  - name: database
-    image: mysql
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-      MYSQL_DATABASE: nuxt_shop
-    command:
-      - ls -al
-      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+#services:
+#  - name: database
+#    image: mysql
+#    environment:
+#      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+#      MYSQL_DATABASE: nuxt_shop
+#    command:
+#      - ls -al
+#      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
 #    commands:
