--- a/.drone.yml
+++ b/.drone.yml
@@ -1,46 +1,33 @@
 kind: pipeline
+type: docker
 name: default
-
 clone:
   depth: 50
 steps:
   - name: install
     image: composer
     commands:
-      - ls -al
-      - apt-get -y update
-      - apt-get -y purge docker.io
-      - apt-get -y install docker.io
-      - rm /usr/local/bin/docker-compose
-      - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-      - chmod +x docker-compose
-      - sudo mv docker-compose /usr/local/bin
-      - ls -al
+      - composer install
       - cp .env.example .env
       - cp docker-compose.yml.example docker-compose.yml
-      - docker-compose up -d --build
-      - docker-compose ps
+      - docker up
       - docker ps
-      - docker-compose exec shop-db bash
-      - mysql -u root -p
-      - root
-#      - vendor/bin/phpunit
-#  - name: test
-#    image: php
-#    commands:
-#      - vendor/bin/phpunit
-#    when:
-#      branch:
-#        - master
-#services:
-#  - name: database
-#    image: mysql
-#    environment:
-#      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-#      MYSQL_DATABASE: nuxt_shop
-#    command:
-#      - ls -al
-#      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+  - name: test
+    image: php
+    commands:
+      - vendor/bin/phpunit
+    when:
+      branch:
+        - master
+services:
+  - name: database
+    image: mysql
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_DATABASE: nuxt_shop
+    command:
+      - ls -al
+      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
 #    commands:
