--- a/.drone.yml
+++ b/.drone.yml
@@ -22,11 +22,12 @@ steps:
 services:
   - name: database
     image: mysql
+    base: /usr bin
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: nuxt_shop
     command:
-      - ls -al
+#      - ls -al
       - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
