--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,8 @@ steps:
       - composer install
       - cp .env.example .env
       - cp docker-compose.yml.example docker-compose.yml
-      - docker up
-      - docker ps
+      - php artisan migrate
+      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
   - name: test
     image: php
     commands:
@@ -28,7 +28,7 @@ services:
       MYSQL_DATABASE: nuxt_shop
     command:
 #      - ls -al
-      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+#      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
 #    commands:
