--- a/.drone.yml
+++ b/.drone.yml
@@ -9,8 +9,8 @@ steps:
     commands:
       - composer install
       - cp .env.example .env
-      - cp docker-compose.yml.example docker-compose.yml
       - php artisan migrate
+      - ls -al
       - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
   - name: test
     image: php
@@ -26,7 +26,7 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: nuxt_shop
-    command:
+#    command:
 #      - ls -al
 #      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
