--- a/.drone.yml
+++ b/.drone.yml
@@ -26,8 +26,8 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: nuxt_shop
-#    command:
-#      - ls -al
+    command:
+      - show databases;
 #      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
