--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 kind: pipeline
 type: docker
 name: default
-clone:
-  depth: 50
+#clone:
+#  depth: 50
 steps:
   - name: install
     image: composer
