--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 kind: pipeline
 type: docker
 name: default
-#clone:
-#  depth: 50
+clone:
+  depth: 50
 steps:
   - name: install
     image: composer
@@ -10,8 +10,7 @@ steps:
       - composer install
       - cp .env.example .env
       - php artisan migrate
-      - ls -al
-#      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
   - name: test
     image: php
     commands:
@@ -26,8 +25,8 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: nuxt_shop
-    command:
-      - show databases;
+#    command:
+#      - ls -al
 #      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
