--- a/.drone.yml
+++ b/.drone.yml
@@ -9,8 +9,9 @@ steps:
     commands:
       - composer install
       - cp .env.example .env
-      - php artisan migrate
-      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
+      - ls -al
+#      - php artisan migrate
+#      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
   - name: test
     image: php
     commands:
@@ -25,8 +26,8 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: nuxt_shop
-#    command:
-#      - ls -al
+    command:
+      - show databases;
 #      - mysql --default-character-set=utf8 nuxt_shop < nuxt_shop.sql
 #  build:
 #    image:php:7.4-fpm-alpine3.10
