--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,28 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+#    - name: Run a one-line script
+#      run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+#    - name: Run a multi-line script
+#      run: |
+#        echo Add other actions to build,
+#        echo test, and deploy your project.
+    - name: copy .env file in ci
+      run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
+    - name: install vendor
+      run: composer install
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Set up MySQL
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        collation server: 'utf8_general_ci'
+        character set server: 'utf8'
+        mysql database: 'nuxt_shop'
+        mysql user: 'root'
+        mysql password: 'root'
+      run: mysql -u root -proot  nuxt_shop < nuxt_shop.sql;
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
+      run: vendor/bin/phpunit
