--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,6 @@ jobs:
         mysql user: 'root'
         mysql password: 'root'
     - names: import database
-      run: mysql -u root -proot  nuxt_shop < nuxt_shop.sql;
+      run: mysql -u root -proot  nuxt_shop < nuxt_shop.sql
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
