--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,7 @@ jobs:
         mysql user: 'root'
         mysql password: 'root'
     - name: import database
-      run: mysql -u root -p nuxt_shop < nuxt_shop.sql 
+#      run: mysql -u root -p root nuxt_shop < nuxt_shop.sql ||
+      run: show databases 
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
