--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    service:
-      mariadb:
-        image: mariadb:latest
-        ports:
-          - 3306
-        env:
-          MYSQL_USER: root
-          MYSQL_PASSWORD: root
-          MYSQL_DATABASE: nuxt_shop
-        options: mysql -u root -p root nuxt_shop < nuxt_shop.sql
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -46,17 +37,16 @@ jobs:
       run: composer install
 #    - name: Generate key
 #      run: php artisan key:generate
-#    - name: Set up MySQL
-#      uses: mirromutth/mysql-action@v1.1
-#      with:
-#        collation server: 'utf8_general_ci'
-#        character set server: 'utf8'
-#        mysql database: 'nuxt_shop'
-#        mysql user: 'root'
-#        mysql password: 'root'
-#    - name: import database
-##      run: mysql -u root -p root nuxt_shop < nuxt_shop.sql ||
-#      run: ls -al &&\
-#          mysql show databases
+    - name: Set up MySQL
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        collation server: 'utf8_general_ci'
+        character set server: 'utf8'
+        mysql database: 'nuxt_shop'
+        mysql user: 'root'
+        mysql password: 'root'
+    - name: import database
+#      run: mysql -u root -p nuxt_shop < nuxt_shop.sql
+      run: mysql  nuxt_shop < nuxt_shop.sql
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
